<resources>
    <string name="app_name">Samplers Application</string>

    <!-- Steps -->
    <string name="step_information">Información</string>
    <string name="step_photo">Foto</string>
    <string name="step_insert_date">Fecha</string>
    <string name="step_insert_time">Hora</string>
    <string name="step_insert_text">Texto</string>
    <string name="step_location">Posición GPS</string>
    <string name="step_multiple_select">Selccionar</string>
    <string name="step_select_one">Seleccionar</string>
    <string name="step_sound_record">Sonido</string>
    <string name="step_route">Recorrido</string>

    <!-- Main Menu Options -->
    <string name="action_settings">Configuración</string>
    <string name="action_samples">Muestras</string>
    <string name="action_help">Ayuda</string>
    <string name="action_logout">Cerrar Sesión</string>

    <string name="yesString">Si</string>
    <string name="noString">No</string>

    <!-- Main Activity -->
    <string name="txt_welcome_message">Bienvenidos a la Aplicación de Prueba de Samplers</string>
    <string name="bt_take_sample">Tomar Muestra</string>

    <string name="bt_login">Iniciar Sesión</string>
    <string name="bt_logout">Cerrar Sesión</string>

    <!-- Login Activity -->
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Login Fragment -->
    <string name="lb_skip_login">Omitir</string>
    <string name="lb_login_message">Por favor inicie sesión</string>

    <!-- Take Sample Activity -->
    <string name="title_activity_take_sample">Tomar Muestra</string>
    <string name="message_sample_saved">Muestra guardada</string>

    <!-- Step Fragments -->
    <string name="bt_next">Siguiente</string>

    <!-- SelectOne Fragment -->
    <string name="error_must_select_an_option">Debe seleccionar una opción</string>

    <!-- MultipleSelect Fragments -->
    <string name="error_must_select_an_option_at_least">Debe seleccionar una opción por lo menos</string>


    <!-- Photo Fragment -->
    <string name="bt_retake_photo">Volver a tomar foto</string>
    <string name="camera_permissions_needed">Se necesitan permisos de acceso a la camara para tomar la foto.</string>
    <string name="error_must_take_photo">Debe tomar la foto</string>

    <!-- Location Fragment -->
    <string name="lb_latitude">Latitud:</string>
    <string name="lb_longitude">Longitud:</string>
    <string name="location_permissions_needed">Se necesitan permisos de acceso a la ubicacion para obtener la posición.</string>
    <string name="error_must_take_location">Debe tomar la posición</string>

    <!-- Route Fragment -->
    <string name="location_permissions_needed_route">Se necesitan permisos de acceso a la ubicacion para obtener la posición.</string>
    <string name="error_must_take_route">Debe tomar el recorrido</string>

    <!-- InsertText Fragment -->
    <string name="error_must_insert_text">Debe ingresar algo</string>

    <!-- for audio record-->
    <string name="record_in_progress">Grabando...</string>
    <string name="record_prompt">Presione el botón para grabar</string>
    <string name="error_must_record_audio">Debe grabar el audio</string>
    <string name="recording_permissions_needed">Se necesitan permisos de acceso para grabar audio.</string>

    <!-- SamplesList Activity -->
    <string name="title_activity_samples_list">Mestras tomadas</string>
    <string name="samples_list_no_samples_message">No hay muestras guardadas en este dispositivo</string>
    <string name="delete_sample_confirmation_message">¿Confirma que elimina la muestra?</string>
    <string name="delete_sent_samples_confirmation_message">¿Confirma que elimina las muestras enviadas?</string>
    <string name="send_sample_success_message">La muestra se envió correctamente</string>
    <string name="send_sample_error_message">Error al enviar la muestra. Por favor intente más tarde</string>
    <!-- SamplesList Menu Options -->
    <string name="action_delete_sent_samples">Eliminar todas las muestras enviadas</string>

    <!-- Help Activity -->
    <string name="title_activity_help">Ayuda</string>



</resources>
