<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.SamplersMainActivity">
    <item
        android:id="@+id/action_samples"
        android:orderInCategory="100"
        android:title="@string/action_samples"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="102"
        android:title="@string/action_help"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
