<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/container"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.SamplersMainActivity">
    <!--android:fitsSystemWindows="true"-->
    <TextView
        android:id="@+id/lb_main_welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome_message"
        android:layout_centerInParent="true"
        android:textSize="@dimen/main_lb_welcome_message_text_size"
        android:gravity="center"
         />



    <Button
        android:id="@+id/bt_main_take_sample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_take_sample"
        android:layout_below="@+id/lb_main_welcome_message"
        android:layout_centerHorizontal="true"
        android:onClick="takeSample" />

    <Button
        android:id="@+id/bt_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_login"
        android:layout_alignParentBottom="true"
        android:onClick="login" />


</RelativeLayout>

