<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.take_sample.InformationFragment">


    <TextView
        android:id="@+id/lb_text_to_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
     />

    <TextView
        android:id="@+id/lb_latitude_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_text_to_show"
        android:layout_alignParentStart="true"
        android:text="@string/lb_latitude"
        />

    <TextView
        android:id="@+id/lb_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_text_to_show"
        android:layout_toEndOf="@+id/lb_latitude_desc"


        />

    <TextView
        android:id="@+id/lb_longitude_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_latitude_desc"
        android:layout_alignParentStart="true"
        android:text="@string/lb_longitude"
        />

    <TextView
        android:id="@+id/lb_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lb_latitude"
        android:layout_toEndOf="@+id/lb_longitude_desc"


        />



    <Button
        android:id="@+id/bt_get_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lb_text_to_show"
        android:layout_marginEnd="11dp"
        android:drawableLeft="@drawable/ic_my_location_black_36dp"
         />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <Button
        android:id="@+id/bt_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp" />



</RelativeLayout>
